# Yieldwatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config_runtime.json  docker-compose.yml  index.py  index_scf.py  publish_layer.py  pyproject.toml  render.yaml  requirements.txt  s.yaml  serverless.yml  serverless_components.yml  serverless_simple.yml  zeabur.json
.claude/: settings.local.json
app/: __init__.py  config.py  logger.py  main.py  main_web.py
app/api/: __init__.py  config.py  dashboard.py  health.py  sse.py
app/services/: calculator.py  data_collector.py  data_service.py  http_client.py  notification.py  scheduler.py  trading_calendar.py
app/templates/: index.html
openspec/changes/archive/2026-04-22-money-fund-arbitrage-monitor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-money-fund-arbitrage-monitor/specs/alert-notification/: spec.md
openspec/changes/archive/2026-04-22-money-fund-arbitrage-monitor/specs/annualized-return-analysis/: spec.md
openspec/changes/archive/2026-04-22-money-fund-arbitrage-monitor/specs/cloud-deployment/: spec.md
openspec/changes/archive/2026-04-22-money-fund-arbitrage-monitor/specs/fund-data-collection/: spec.md
openspec/changes/archive/2026-04-22-money-fund-arbitrage-monitor/specs/web-dashboard/: spec.md
scf/timer/: timer_handler.py
scf/web/: bootstrap
tests/: conftest.py  test_api.py  test_calculator.py  test_data_collector.py  test_trading_calendar.py
